<resources>
    <string name="app_name">Fire Chat</string>
    <string name="username_hint">email</string>
    <string name="password_hint">password</string>
    <string name="button_login">Log in</string>
    <string name="button_signup">Sign up</string>
    <string name="login_text">Nie masz konta? Zarejestruj się!</string>
    <string name="signup_text">Masz już konto? Zaloguj się!</string>
    <string name="profile_image_text">Przytrzymaj zdjęcie, aby je zmienić!</string>
    <string name="save_button_text">Zapisz</string>
    <string name="name_hint">Wprowadź nazwę użytkownika</string>
    <string name="verification">Email jest niezweryfikowany</string>
    <string name="nazwa_chatu">Nazwa Chatu</string>
    <string name="u_ytkownik_ostatnia_wiadomo">Użytkownik: Ostatnia wiadomość</string>
    <string name="bottom_sheet_title">Podaj nazwę nowego chatu:</string>
    <string name="nazwa_czatu">Nazwa czatu</string>
    <string name="dodaj">Dodaj</string>
    <string name="edytowany_chat">Edytowany chat: </string>
    <string name="delete_room">Usuń chat</string>
    <string name="edit_chat">Edytuj chat</string>
    <string name="zmiana_nazwy">Zmiana nazwy:</string>
    <string name="new_name">Podaj nową nazwę</string>
    <string name="anuluj">Anuluj</string>
    <string name="ok">Ok</string>
    <string name="nazwa_pokoju">Nazwa pokoju</string>
    <string name="tutaj_wpisz_wiadomo">Tutaj wpisz wiadomość</string>
    <string name="tytu">Tytuł</string>
    <string name="message">Wiadomość</string>
    <string name="add_users">Dodaj użytkowników:</string>
    <string name="message_add_use">Zaznacz, aby wybrać.</string>
    <string name="username">Nazwa użytkownika</string>
    <string name="data">Data</string>
    <string name="delete_message">Usuń wiadomość</string>
    <string name="edit_message">Edytuj wiadomość</string>
    <string name="napisz_now_wiadomo">Napisz nową wiadomość</string>
</resources>
