<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:layout_gravity="center"
    android:padding="@dimen/margin_right">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tytu"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size3"
        android:textAlignment="center"
        android:textStyle="bold"
        android:id="@+id/title"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/message"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size4"
        android:textAlignment="center"
        android:padding="@dimen/padding"
        android:id="@+id/message"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/anuluj"
            android:textColor="@color/white"
            android:background="@color/colorAccent"
            android:textSize="@dimen/text_size"
            android:id="@+id/button_anuluj"
            android:layout_marginEnd="@dimen/margin_right"
            android:layout_marginStart="@dimen/margin_left"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/ok"
            android:textColor="@color/white"
            android:background="@color/colorAccent"
            android:textSize="@dimen/text_size"
            android:id="@+id/button_ok"
            android:layout_marginEnd="@dimen/margin_right"
            android:layout_marginStart="@dimen/margin_left"/>

    </LinearLayout>

</LinearLayout>