<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpActivity"
    android:background="@color/colorPrimaryDark">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="@dimen/logo_imageView_height"
        android:src="@drawable/ic_icon"
        android:scaleType="centerInside"
        android:background="@color/colorAccent"
        android:id="@+id/icon"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/icon"
        android:background="@color/colorPrimaryDark"
        android:layout_marginEnd="@dimen/margin_right"
        android:layout_marginStart="@dimen/margin_left">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:hint="@string/username_hint"
            android:textColorHint="@color/white"
            android:id="@+id/username"
            android:layout_marginTop="@dimen/margin_top"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:hint="@string/password_hint"
            android:textColorHint="@color/white"
            android:id="@+id/password"
            android:inputType="textPassword"
            android:layout_below="@id/username"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_signup"
            android:textColor="@color/white"
            android:background="@color/colorPrimary"
            android:id="@+id/button_signup"
            android:layout_below="@id/password"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="@string/signup_text"
            android:gravity="center"
            android:padding="@dimen/padding"
            android:textSize="@dimen/text_size"
            android:id="@+id/login_switch"
            android:layout_below="@id/button_signup"/>

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:id="@+id/progress_bar"
            android:visibility="gone"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/login_switch"/>

    </RelativeLayout>

</RelativeLayout>