<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileCreateActivity"
    android:background="@color/colorPrimaryDark">

    <com.mikhaellopez.circularimageview.CircularImageView
        android:layout_width="@dimen/logo_imageView_width"
        android:layout_height="@dimen/logo_imageView_height"
        android:src="@drawable/default_profile"
        android:id="@+id/profile_image"
        app:civ_border_color="@color/colorAccent"
        app:civ_border_width="6dp"
        app:civ_shadow="true"
        app:civ_shadow_radius="5dp"
        app:civ_shadow_color="@color/colorAccent"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/profile_image"
        android:textColor="@color/white"
        android:text="@string/profile_image_text"
        android:gravity="center"
        android:textSize="@dimen/text_size"
        android:id="@+id/txt1"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top"
        android:layout_below="@id/txt1"
        android:layout_marginEnd="@dimen/margin_right2"
        android:layout_marginStart="@dimen/margin_left2"
        android:id="@+id/name"
        android:hint="@string/name_hint"
        android:textColorHint="@color/white"
        android:gravity="center"
        android:textColor="@color/white"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/name"
        android:layout_marginTop="5dp"
        android:text="@string/save_button_text"
        android:textColor="@color/white"
        android:layout_centerHorizontal="true"
        android:background="@color/colorPrimary"
        android:id="@+id/button_save" />

    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/button_save"
        android:layout_marginTop="10dp"
        android:visibility="gone"
        android:id="@+id/progress_bar"/>

</RelativeLayout>