<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="14dp"
    android:layout_marginStart="@dimen/margin_top_recycler"
    android:layout_marginEnd="@dimen/margin_top_recycler"
    android:focusable="true"
    android:clickable="true"
    android:foreground="?android:attr/selectableItemBackground"
    android:layout_margin="@dimen/margin_top_recycler">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.mikhaellopez.circularimageview.CircularImageView
            android:layout_width="@dimen/logo_imageView3_width"
            android:layout_height="@dimen/logo_imageView3_height"
            android:id="@+id/userPicture"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:src="@drawable/default_profile"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/username"
            android:textSize="@dimen/text_size2"
            android:textColor="@color/grey"
            android:layout_toEndOf="@id/userPicture"
            android:paddingStart="@dimen/padding_start"
            tools:ignore="RtlSymmetry"
            android:id="@+id/user_name"
            android:layout_alignParentTop="true"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/data"
            android:textSize="@dimen/text_size2"
            android:textColor="@color/grey"
            tools:ignore="RtlSymmetry"
            android:id="@+id/date"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:paddingRight="@dimen/padding_start"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/message"
            android:textSize="@dimen/text_size4"
            android:textColor="@color/black"
            tools:ignore="RtlSymmetry"
            android:id="@+id/message"
            android:layout_toEndOf="@id/userPicture"
            android:layout_below="@id/user_name"
            android:paddingLeft="@dimen/padding_start"
            android:paddingRight="@dimen/padding_start"
            android:paddingBottom="@dimen/padding_start"/>


    </RelativeLayout>

</androidx.cardview.widget.CardView>