<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:padding="@dimen/padding">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/title"
        android:layout_gravity="center"
        android:text="@string/edytowany_chat"
        android:textSize="@dimen/text_size3"
        android:textStyle="bold"
        android:textColor="@color/white"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/button_delete"
        android:orientation="horizontal"
        android:background="@color/colorAccent"
        android:focusable="true"
        android:clickable="true"
        android:layout_marginStart="@dimen/margin_left"
        android:layout_marginEnd="@dimen/margin_right"
        android:layout_marginTop="@dimen/margin_top_recycler"
        android:foreground="?android:attr/selectableItemBackground">

        <ImageView
            android:layout_width="@dimen/logo_imageView3_width"
            android:layout_height="@dimen/logo_imageView3_height"
            android:src="@drawable/ic_clear_black_24dp"
            android:scaleType="centerInside"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size4"
            android:text="@string/delete_room"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/button_edit"
        android:orientation="horizontal"
        android:background="@color/colorAccent"
        android:focusable="true"
        android:clickable="true"
        android:layout_marginStart="@dimen/margin_left"
        android:layout_marginEnd="@dimen/margin_right"
        android:layout_marginTop="@dimen/margin_top_recycler"
        android:foreground="?android:attr/selectableItemBackground">

        <ImageView
            android:layout_width="@dimen/logo_imageView3_width"
            android:layout_height="@dimen/logo_imageView3_height"
            android:src="@drawable/ic_edit_black_24dp"
            android:scaleType="centerInside"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size4"
            android:text="@string/edit_chat"/>

    </LinearLayout>

</LinearLayout>